# 2022-parsium

./: CMakeLists.txt  README.md  conanfile.txt
example/: CMakeLists.txt
example/json_validator_generation/: CMakeLists.txt  expected_generation.hpp  json.hpp  main.cpp
example/mckeeman/: CMakeLists.txt  json.hpp  main.cpp
example/mckeeman/format/: json.hpp
example/sandbox/: main.cpp
example/sandbox/json/: main.cpp
src/: CMakeLists.txt
src/common/: struct.hpp
src/common/automaton/: finite_state.hpp
src/common/input_stream/: input_stream.hpp
src/generator/: generate_cpp.hpp  main.cpp  state.hpp  unary_predicates.hpp
src/generator/action/: action.hpp
src/generator/automaton/: automaton.hpp  create_state_in_automaton.hpp  create_transition_in_automaton.hpp  is_accepted.hpp  proxy.hpp
src/generator/context/: context.hpp  create_automaton_in_context.hpp  create_state_in_context.hpp  create_transition_in_context.hpp
src/generator/executer/: executer.hpp
src/generator/position/: position.hpp  transformed.hpp
src/generator/state/: id.hpp  proxy.hpp  state.hpp
src/generator/transition/: is_accepting.hpp  proxy.hpp  transition.hpp
src/parsium/: automaton.hpp  common.hpp  mckeeman.hpp  mckeeman_formatter.hpp  mckeeman_grammar.hpp  mckeeman_node.hpp  mckeeman_tree.hpp  mckeeman_validator.hpp  parsing_tree.hpp
src/parsium/automaton/: automaton.hpp  composition.hpp  concatenation.hpp  copy.hpp  determinism.hpp  feed.hpp  position.hpp  print.hpp  state.hpp  substitution.hpp  transition.hpp  traversal.hpp  union.hpp
src/parsium/common/: breakpoint.hpp  container.hpp  input_stream.hpp  pointer.hpp  reference.hpp
src/parsium/common/compiler/: inlining_epilogue.hpp  inlining_prologue.hpp
src/parsium/common/container/: naive_tree.hpp  tree.hpp
src/parsium/common/container/naive_tree/: node.hpp  tree.hpp
src/parsium/common/container/tree/: data_index.hpp  node.hpp  node_id.hpp  node_index.hpp  node_ptr.hpp  node_ref.hpp  subtree.hpp  tree.hpp
src/parsium/common/cpp/: int.hpp
src/parsium/common/debugging/: breakpoint.hpp  breakpoint.inl
src/parsium/common/exception/: exception.hpp  invariant_violation.hpp  not_implemented.hpp  precondition_violation.hpp
src/parsium/common/std/: string.hpp  vector.hpp
src/parsium/common/std/string/: escape.hpp
src/parsium/common/std/vector/: concatenation.hpp
src/parsium/common/tag/: const.hpp  deep.hpp  invalid.hpp  mutable.hpp  recursive.hpp  self.hpp  shallow.hpp  throw.hpp  undefined_behaviour.hpp
src/parsium/common/typing/: const_if.hpp  is_const.hpp  without_const.hpp
src/parsium/common/typing/ptr/: fake_ptr.hpp
src/parsium/formatting/: tree.hpp
src/parsium/json/: building.hpp  formatting.hpp
src/parsium/json/building/: array.hpp  builder.hpp  element.hpp  json.hpp  member.hpp  number.hpp  object.hpp  string.hpp
src/parsium/json/building/array/: at.inl  create_at_end.inl  elements.inl  is_valid.inl
src/parsium/json/building/element/: is_valid.inl
src/parsium/json/building/json/: is_valid.inl
src/parsium/json/building/member/: element.inl  is_valid.inl  string.inl
src/parsium/json/building/number/: is_valid.inl
src/parsium/json/building/object/: create_member_at_end.inl  is_valid.inl  members.inl
src/parsium/json/building/string/: assign.inl  characters.inl  is_valid.inl
src/parsium/json/formatting/: formatter.hpp
src/parsium/mckeeman/: alternative.hpp  builder.hpp  exclude.hpp  formatting.hpp  grammar.hpp  item.hpp  literal.hpp  name.hpp  namespace.hpp  parser.hpp  range.hpp  range_exclude.hpp  rule.hpp  singleton.hpp
src/parsium/mckeeman/builder/: alternative.hpp  alternative_metadata.hpp  characters.hpp  grammar.hpp  item.hpp  literal.hpp  name.hpp  namespace.hpp  range_exclude.hpp  rule.hpp  singleton.hpp  traits.hpp
src/parsium/mckeeman/builder/alternative/: builder.hpp  items.inl  nothing.hpp
src/parsium/mckeeman/builder/alternative_metadata/: builder.hpp
src/parsium/mckeeman/builder/characters/: character_count.hpp  does_accept.hpp
src/parsium/mckeeman/builder/grammar/: builder.hpp  rules.inl
src/parsium/mckeeman/builder/item/: builder.hpp  dispatch_to.inl
src/parsium/mckeeman/builder/literal/: character_count.hpp  dispatch_to.inl  does_accept.hpp
src/parsium/mckeeman/builder/range_exclude/: character_count.hpp  does_accept.hpp  operator_subtraction.hpp
src/parsium/mckeeman/builder/rule/: alternatives.hpp  builder.hpp  grammar.hpp  name.inl
src/parsium/mckeeman/builder/rule_metada/: builder.hpp
src/parsium/mckeeman/builder/singleton/: character_count.hpp  does_accept.hpp
src/parsium/mckeeman/common/: range.hpp  singleton.hpp
src/parsium/mckeeman/concept/: alternative.hpp  grammar.hpp  name.hpp  namespace.hpp  rule.hpp  traits.hpp
src/parsium/mckeeman/concept/grammar/: rule.hpp
src/parsium/mckeeman/concept/rule/: index_of.hpp
src/parsium/mckeeman/formatting/: namespace.hpp  raw.hpp  tree.hpp
src/parsium/mckeeman/generator/generator/: generate_cpp.hpp  generator.hpp  indentation.hpp
src/parsium/mckeeman/kickstarting/: grammar.hpp  instancing.hpp  rules.hpp
src/parsium/mckeeman/parser/: alternative_cursor.hpp  cursor.hpp  cursor.natvis  head.hpp  multi_head.hpp  multi_head_2.hpp  parser.hpp  rule_cursor.hpp
src/parsium/mckeeman/parser/json/: listener.hpp
src/parsium/mckeeman/range/: alternative.hpp
src/parsium/mckeeman/storing/: building.hpp  copy.hpp  iterating.hpp  node.hpp  traversal.hpp  validity.hpp  validity.inl
src/parsium/mckeeman/validating/: validator.hpp
src/sandbox/fsm/: generated.cpp  main.cpp
src/sandbox/fsm/example/: at_least_one_b.hpp  bench_even.cpp  even_number_of_a.hpp
src/sandbox/json/: CMakeLists.txt  format.cpp  format.hpp  main.cpp
src/sandbox/json2/: CMakeLists.txt  format.cpp  format.hpp  main.cpp
src/sandbox/mckeeman/: CMakeLists.txt  json.hpp  main.cpp
test/: CMakeLists.txt  rules.hpp  src.hpp  tdd.cpp
test/common/container/naive_tree/: main.cpp
test/common/container/tree/: main.cpp
test/json/: main.cpp  test_sets.hpp  tests.cpp  tests.hpp  unit.cpp  unit2.cpp
test/mckeeman/: tests.cpp
(+27 files in other folders)
